
2009-10-31 / non-released / Phantom Inker (inker2576@yahoo.com)
	* Fixed a bug in SetWikiURL that referenced an invalid function
		parameter.

2009-10-10 / v1.4.3 / Phantom Inker (inker2576@yahoo.com)
	* Fixed a bug in plain mode that was causing tags processed in
		plain mode to throw errors (it was calling a function that
		had since been renamed).
	* Added tests for plain mode to ensure this omission won't
		happen again.

2009-06-21 / v1.4.2 / Phantom Inker (inker2576@yahoo.com)
	* SECURITY FIX: [img] tag was allowing HTML content to be passed
		through.

2009-04-03 / v1.4.1 / Phantom Inker (inker2576@yahoo.com)
	* Fixed documentation for [quote] tag's url= attribute.

2009-03-20 / v1.4.1 / Phantom Inker (inker2576@yahoo.com)
	* Added support for SetURLTarget() and GetURLTarget(), and
		extended support for SetURLTargeting().
	* Added four more regression tests for URL targeting.

2009-02-16 / v1.4.0 RELEASE / Phantom Inker (inker2576@yahoo.com)
	* Replaced parsing logic for tags so that an equal-sign before
	    whitespace can be considered part of a tag's value.  This
	    allows [url=http://foo.com?bar=baz] to be parsed the way the
	    user expects.  Note that this does break some (probably
	    invalid) tags, but overall, the new parsing algorithm seems
	    to be a win.
	* Added several regression tests for the new tag-parsing logic.
	* Added SetURLTargetable() and GetURLTargetable().  However, the
	    default setting is to have this disabled for security reasons.
	* Updated [url] tag to support URL targeting, using the standard
	    target="" form.
	* Fixed Wikify() so that wiki links with ' or , in them will be
	    processed correctly.
	* Added the _tag, _endtag, _hasend, and _params tag parameters.
	* Added new appendix H for the tag parameters; added additional
	    documentation for Set/GetURLTargetable().
	* Added $debug flag to BBCodeLexer, replicated from the same flag in
	    class BBCode itself.
